<resources>
    <string name="app_name">GrimoireMTG</string>
    <string name="welcome_message_initial">Welcome to GrimoireMTG</string>
    <string name="type_name">Type your username:</string>
    <string name="type_email">Type your email:</string>
    <string name="type_pwd">Type your password:</string>
    <string name="generic_error_message">An unexpected error occurred. Please try again later.</string>
    <string name="message_field_required">Field %s is required!</string>
    <string name="welcome_message">Hello %s, welcome to GrimoireMTG!</string>
    <string name="got_login">Login</string>
    <string name="login_error">Login Error</string>
    <string name="username">User: %s</string>
    <string name="field_name">Fill the field with your Name!</string>
    <string name="email_field">Invalid E-mail!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_title">Sign Up to GrimoireMTG</string>
    <string name="sign_up_description">Register to get access to the GrimoireMTG app.</string>
    <string name="username_hint">Username:\n</string>
    <string name="username_email">E-mail:</string>
    <string name="password">Password:\n</string>
    <string name="password_confirmation">Confirm Password:</string>
    <string name="message_password_not_match">Passwords do not match</string>
    <string name="password_field">Invalid password!</string>
    <string name="error_sign_up">There has been a problem with your registration, please check your details and try again.</string>
    <string name="Collections">Colletions</string>
    <string name="Favorites">Favorites</string>
    <string name="choose_collection">Choose a collection</string>
    <string name="collection_name">%s</string>
    <string name="back_arrow">back arrow</string>
    <string name="profile_ic">profile icon</string>
    <string name="search_bar_hint">Search cards</string>
    <string name="rarity">rarity</string>
    <string name="card_type">card type</string>
    <string name="card_set">%s</string>
    <string name="green_mana">green mana</string>
    <string name="red_mana">red mana</string>
    <string name="black_mana">black mana</string>
    <string name="blue_mana">blue mana</string>
    <string name="white_mana">white mana</string>
    <string name="cards">%s</string>
</resources>