<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".ui.MainActivity">

  <TextView
      android:id="@+id/username"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/username"
      android:textColor="#000"
      android:textSize="16sp"
      app:drawableStartCompat="@drawable/rounded_button" />

  <TextView
      android:id="@+id/appTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="48dp"
      android:text="@string/app_name"
      android:textColor="#000"
      android:textSize="24sp"
      android:textStyle="bold" />

  <LinearLayout
      android:id="@+id/buttonContainer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/appTitle"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="32dp"
      android:orientation="horizontal"
      android:gravity="center">

    <Button
        android:id="@+id/collectionsButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Collections"
        android:textColor="#fff" />

    <Button
        android:id="@+id/favoritesButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Favorites"
        android:textColor="#fff" />
  </LinearLayout>
</RelativeLayout>
